@@ -36,8 +36,8 @@ Encoding: UTF-8
 Authors@R: c(person(given="Henrik", family="Singmann",
     email="henrik.singmann@psychologie.uni-freiburg.de",
     role=c("aut", "cre")))
-Version: 0.4-52
-Date: 2013-02-08
+Version: 0.4-54
+Date: 2013-02-09
 Collate:
     'afex-package.R'
     'aov.car.R'
